refactored JPA repository method